--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/aws-lambda": "^8.10.31",
-    "@types/node": "^12.7.5",
-    "@types/request-promise": "^4.1.44",
     "aws-sdk": "^2.532.0",
+    "axios": "^0.19.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.31",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^12.7.5",
     "typescript": "^3.6.3"
   }
 }
