--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.532.0",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
