--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "sls-financial-data-api",
+  "name": "financial-data-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Financial API to retrieve financial data from data providers",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "deploy": "npm run build && sls deploy"
+    "debug-lambda": "export SLS_DEBUG=* && node --inspect /usr/local/bin/serverless offline -s dev",
+    "build": "npm run copy && tsc -p ./",
+    "lint": "npx eslint ./**/*.ts",
+    "copy": "copyfiles src/**/*.json dist/",
+    "deploy": "npm run lint && npm run build && sls deploy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.532.0",
-    "axios": "^0.19.0",
-    "moment": "^2.24.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.31",
     "@types/axios": "^0.14.0",
     "@types/node": "^12.7.5",
-    "typescript": "^3.6.3"
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "eslint": "^6.7.2",
+    "typescript": "^3.7.3"
   }
 }
