--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,5 +59,13 @@
     /* Experimental Options */
     "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     "emitDecoratorMetadata": true         /* Enables experimental support for emitting type metadata for decorators. */
-  }
+  },
+  "include": [
+    "./src/**/*",
+    "./e2e/src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
