--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.532.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.31",
