--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.532.0",
     "axios": "^0.19.0",
     "inversify": "^5.0.1",
+    "inversify-inject-decorators": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "serverless-plugin-typescript": "^1.1.9"
   },
