--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "debug-lambda": "export SLS_DEBUG=* && node --inspect=5858 /usr/local/bin/serverless offline -s dev",
+    "debug-lambda-win": "SET SLS_DEBUG=* && node --inspect=5858 %USERPROFILE%\\AppData\\Roaming\\npm\\node_modules\\serverless\\bin\\serverless offline -s dev",
     "lint": "npx eslint ./**/*.ts",
     "deploy": "npm run lint && npm run build && sls deploy"
   },
