Updates for the quote service and new config api settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
             "runtimeExecutable": "npm",
             "runtimeArgs": [
                 "run",
-                "debug-lambda"
+                "debug-lambda-unix"
             ],
             "port": 5858
         }
